#AutoConf for DccNiTghtmare

AC_PREREQ(2.61)
AC_INIT("DccNiTghmare", "0.2", "http://dccnitghtmare.sf.net")
#AC_CONFIG_SRCDIR([src/])
#AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_CPP


# Check for sdl-config to find SDL Paths
AC_CHECK_PROG(SDLCONFIG,sdl-config,yes,no)
if test $SDLCONFIG = "yes"; then
{
   CFLAGS="$CFLAGS $(sdl-config --cflags)"
   LIBS="$LIBS $(sdl-config --libs)"
}
else
{
   AC_MSG_ERROR(Coudn't find the program sdl-config. Usually it is installed with SDL library. Please go to http://www.libsdl.org and get it.)
}
fi

#Check for openal-config to find openal Paths
AC_CHECK_PROG(OPENALCONFIG,openal-config,yes,no)
if test $OPENALCONFIG = "yes"; then
{
   CFLAGS="$CFLAGS $(openal-config --cflags)"
   LIBS="$LIBS $(openal-config --libs)"
}
else
{
   AC_MSG_ERROR(Coudn't find the program open-config. Usually it is installed with SDL library. Please go to http://www.libsdl.org and get it.)
}
fi


# Checks for libraries.

#OpenGL
AC_CHECK_LIB([GL], [main], [], [AC_MSG_ERROR(Couldn't find OpenGL. Run ./configure LDFLAGS=-Lpath_to_opengl_lib. For Example: ./configure LDFLAGS=-L/usr/X11R6/lib/)])
AC_CHECK_LIB([GLU], [main], [], [AC_MSG_ERROR(Couldn't find GLU. Run ./configure LDFLAGS=-Lpath_to_opengl_lib. For Example: ./configure LDFLAGS=-L/usr/X11R6/lib/)])
AC_CHECK_LIB([SDL], [main], [], [AC_MSG_ERROR(Coudn't find SDL. Please go to http://www.libsdl.org and get it.)])
AC_CHECK_LIB([SDL_image], [main], [], [AC_MSG_ERROR(Couldn't find SDL_image. Please go to http://www.libsdl.org/projects/SDL_image and get it!)])
AC_CHECK_LIB([cal3d], [main], [], [AC_MSG_ERROR(Couldn't find Cal3D. Please go to http://home.gna.org/cal3d and get it.)])
AC_CHECK_LIB([m], [main], [], [AC_MSG_ERROR(Couldn't find math lib. Something is wrong with your C/C++ distribution)])
AC_CHECK_LIB([ogg], [main], [], [AC_MSG_ERROR(Couldn't find libogg. Go to http://xiph.org/vorbis and get it.)])
AC_CHECK_LIB([openal], [main], [], [AC_MSG_ERROR(Couldn't find OpenAL. Go to http://www.openal.org and get it.)])
AC_CHECK_LIB([vorbis], [main], [], [AC_MSG_ERROR(Couldn't find libvorbis. Go to http://xiph.org/vorbis and get it.)])
AC_CHECK_LIB([vorbisfile], [main], [], [AC_MSG_ERROR(Couldn't find libogg. Go to http://xiph.org/vorbis and get the libvorbis file.)])

AC_CHECK_LIB([lua], [main], [], 
             #if is false
             [ AC_CHECK_LIB([lua51], [main], [], 
             #if is false too, not found the library
             [AC_MSG_ERROR(Couldn't find lua. Go to http://www.lua.org and get it.)])  ])


#AC_CHECK_LIB([lua], [main], [], [AC_MSG_ERROR(Couldn't find lua. Go to http://www.lua.org and get it. If you already have lua, try to run ./configure LDFLAGS=-Lpath_to_lua_lib. For Example: ./configure LDFLAGS=-L/usr/lib/lua5.1/)])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADER(lua.h, [], [AC_MSG_ERROR(Couldn't find lua headers. Run ./configure CPPFLAGS=-Ipath_to_lua_headers. For Example: ./configure CPPFLAGS=-I/usr/include/lua5.1/)])
AC_CHECK_HEADER(lualib.h, [], [AC_MSG_ERROR(Couldn't find lua headers. Run ./configure CPPFLAGS=-Ipath_to_lua_headers. For Example: ./configure CPPFLAGS=-I/usr/include/lua5.1/)])
AC_CHECK_HEADER(lauxlib.h, [], [AC_MSG_ERROR(Couldn't find lua headers. Run ./configure CPPFLAGS=-Ipath_to_lua_headers. For Example: ./configure CPPFLAGS=-I/usr/include/lua5.1/)])
AC_CHECK_HEADER(GL/glu.h, [], [AC_MSG_ERROR(Couldn't find OPENGL headers. Run ./configure CPPFLAGS=-Ipath_to_opengl_headers. For Example: ./configure CPPFLAGS=-I/usr/X11R6/include/)])
AC_CHECK_HEADER(SDL/SDL_opengl.h, [], [AC_MSG_ERROR(Couldn't find SDL headers. Run ./configure CPPFLAGS=-Ipath_to_sdl_headers. For Example: ./configure CPPFLAGS=-I/usr/local/include/)])
AC_CHECK_HEADER(SDL/SDL.h, [], [AC_MSG_ERROR(Couldn't find SDL headers. Run ./configure CPPFLAGS=-Ipath_to_sdl_headers. For Example: ./configure CPPFLAGS=-I/usr/local/include/)])
AC_CHECK_HEADER(SDL/SDL_image.h, [], [AC_MSG_ERROR(Couldn't find SDL headers. Run ./configure CPPFLAGS=-Ipath_to_sdl_headers. For Example: ./configure CPPFLAGS=-I/usr/local/include/)])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([atexit floor sqrt strrchr strstr])

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/app/Makefile
                 src/app/mapEditor/Makefile
                 src/classes/Makefile
                 src/engine/Makefile
                 src/etc/Makefile
                 src/fight/Makefile
                 src/gui/Makefile
                 src/ia/Makefile
                 src/lang/Makefile
                 src/map/Makefile
                 src/particle/Makefile
                 src/sound/Makefile])
AC_OUTPUT
